2019-10-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_font_dialog.c: Add geda_font_dialog_set_font.

2019-10-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_option_menu.c: Add ancillary bwidth_x2 in geda_option_
      menu_size_allocate and explicitly shift left to multiply by 2. Add
      ancillary menu_shell in geda_option_menu_key_press. Add ancillaries
      xpad and ypad in geda_option_menu_paint and explicitly shift left to
      multiply by 2.

2019-10-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Partially revert commit e1b2ae6b7810;
      revise geda_menu_is_empty to validate that menu is a container.

2019-10-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Add internal documentation for

          * geda_menu_item_size_request
          * geda_menu_item_draw;
          * geda_menu_item_get_preferred_width;
          * geda_menu_item_get_preferred_height;
          * geda_menu_item_get_preferred_height_for_width

2019-10-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Convert While loop to a For loop in
      geda_menu_is_empty, and remove checking for the "empty-menu-item"
      data, which is never set. Add ancillary is_empty and sensitive in
      geda_menu_item_update. Revise documentation:

          * geda_menu_item_set_submenu
          * get_arrow_size

2019-10-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Remove redundant validation and simplify
      validation of menu in geda_menu_is_empty, suspend initialization of the
      result until after validation, and rename list pointer cur -> iter.

2019-09-23 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add documentation for

          * geda_get_widget_requisition
          * geda_get_widget_parent
          * geda_get_widget_window
          * geda_get_widget_allocation
