@@ -311,13 +311,22 @@ check_accessors ()
   }
   else {
 
-    GdkFont *font;
+    GdkFont *font1;
+    GdkFont *font2;
 
-    font = geda_font_dialog_get_font ((GedaFontDialog*)widget);
+    font1 = geda_font_dialog_get_font ((GedaFontDialog*)widget);
 
-    if (!font) {
+    if (!font1) {
       fprintf(stderr, "FAILED: line <%d> get_font %s\n", __LINE__, TWIDGET);
       result++;
+    }
+
+    // "-adobe-times-bold-i-normal--12-120-75-75-p-68-iso10646-1"
+    font1 = gdk_font_load ("12x24");
+
+    if (!font1) {
+      fprintf(stderr, "GdkFont failure <%d> get_font %s\n", __LINE__, TWIDGET);
+      return 0;
     }
 
     g_object_ref_sink(widget); /* Sink reference to the widget */
