@@ -2,6 +2,10 @@
 
     * src/widgets/geda_font_dialog.c: Add geda_font_dialog_set_font.
 
+    * tests/test_font_dialog.c: Add checks for:
+
+          * geda_font_dialog_get_font
+
 2019-10-08 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_option_menu.c: Add ancillary bwidth_x2 in geda_option_
